--- a/Variable/PythonPractice/test1.html
+++ b/Variable/PythonPractice/test1.html
@@ -8,7 +8,7 @@
         <h1>一级标题</h1>
         <h2>二级标题</h2>
         <p>这里可以写一段文字</p>
-        <img src="F:\壁纸\壁纸\15.jpg">
+        <img src="15.jpg">
         <div>
             <ul>hello lemon</ul>
             <ul>hello lemon</ul>
